# mental-health-crewai

./: README.md  pyproject.toml  report.md
src/mental_health/: crew.py  main.py
src/mental_health/config/: agents.yaml  tasks.yaml
