[project]
name = "mental_health"
version = "0.1.0"
description = "mental_health using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
mental_health = "mental_health.main:run"
run_crew = "mental_health.main:run"
train = "mental_health.main:train"
replay = "mental_health.main:replay"
test = "mental_health.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
